# steam-tradeoffer-manager

./: .gitignore  Cargo.toml
src/: error.rs  helpers.rs  lib.rs  serialize.rs  static_functions.rs  types.rs
src/api/: builder.rs  helpers.rs  mod.rs  response.rs  response_wrappers.rs
src/manager/: builder.rs  mod.rs
src/mobile_api/: builder.rs  mod.rs
src/request/: inventory.rs
src/response/: classinfo.rs
